# jobq

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
proof-of-concept/: custom_worker.py  mass_reindex.py  non_rq_poc.py  spawn_workers.py  tasks.py
src/atlas_consortia_jobq/: __init__.py  queue.py
src/atlas_consortia_queue/: __init__.py
