[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-consortia-jobq"
authors = [
    { name="Atlas Consortia", email="api-developers@hubmapconsortium.org" },
]
description = "Package to facilitate queueing of jobs using Redis"
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
keywords = ["queue", "JobQ", "HuBMAP", "Atlas Consortia JobQ"]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "atlas_consortia_jobq.__version__"}
dependencies = {file = "requirements.txt"}